fixed horizontal scroll in mob ver

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
   --transition: 0.35s cubic-bezier(0.4,0,0.2,1);
 }
 
-html { scroll-behavior: smooth; }
+html { scroll-behavior: smooth; overflow-x: hidden;}
 
 body {
   font-family: 'Inter', system-ui, sans-serif;
@@ -37,6 +37,7 @@ body {
   color: var(--text);
   background: var(--bg);
   -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
 }
 
 .container {
